--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
+/* ===== index.html ===== */
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Mobility Dashboard Demo</title>
+<link rel="stylesheet" href="styles.css">
+
+
+<!-- Leaflet CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+<!-- Chart.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+</head>
+<body>
+<div class="container">
+<h1>Mobility Dashboard Demo</h1>
+
+
+<!-- Heatmap Section -->
+<section>
+<h2>Campus Heatmap – Fontys Eindhoven</h2>
+<div id="campus-map" style="height:400px; border-radius:12px;"></div>
+</section>
+
+
+<!-- Busyness Bar Chart Section -->
 <section>
 <h2>Campus Busyness (8 AM – 5 PM)</h2>
 <canvas id="busyness-chart" style="max-width:100%; height:300px;"></canvas>
 </section>
 
 
-<!-- Existing Widgets Section -->
+<!-- Widgets Section -->
 <section class="widgets">
 <div class="widget">
 <h3>Weather</h3>
@@ -59,8 +87,6 @@
 <li>Peak shift: +20 minutes</li>
 </ul>
 </section>
-
-
 </div>
 <script src="script.js"></script>
 </body>
