--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-/* ===== index.html ===== */
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Mobility Dashboard Demo</title>
 <link rel="stylesheet" href="styles.css">
 
 
@@ -26,9 +21,9 @@
 </section>
 
 
-<!-- Busyness Bar Chart Section -->
+<!-- Parking Occupancy Chart Section -->
 <section>
-<h2>Campus Busyness (8 AM – 5 PM)</h2>
+<h2>Parking Occupancy Today</h2>
 <canvas id="busyness-chart" style="max-width:100%; height:300px;"></canvas>
 </section>
 
