--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- Parking Prediction Section -->
 <section>
-<h2>Parking Prediction Modeling</h2>
+<h2>Parking Prediction Today</h2>
 <div class="pred-grid">
 <div class="pbox"><h4>+1 hour</h4><p class="big">54%</p></div>
 <div class="pbox"><h4>+2 hours</h4><p class="big">48%</p></div>
