--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Mobility Dashboard Demo</title>
 <link rel="stylesheet" href="styles.css">
 
 
@@ -50,7 +54,7 @@
 
 <!-- Parking Prediction Section -->
 <section>
-<h2>Parking Prediction Today</h2>
+<h2>Parking Prediction Modeling</h2>
 <div class="pred-grid">
 <div class="pbox"><h4>+1 hour</h4><p class="big">54%</p></div>
 <div class="pbox"><h4>+2 hours</h4><p class="big">48%</p></div>
