--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 <section>
 <h2>Parking Prediction Modeling</h2>
 <div class="pred-grid">
-<div class="pbox"><h4>+1 hour</h4><p class="big">54%</p></div>
-<div class="pbox"><h4>+2 hours</h4><p class="big">48%</p></div>
-<div class="pbox"><h4>+3 hours</h4><p class="big">43%</p></div>
-<div class="pbox"><h4>+4 hours</h4><p class="big">61%</p></div>
+<div class="pbox"><h4>8am-10am</h4><p class="big">65%</p></div>
+<div class="pbox"><h4>10am-12pm</h4><p class="big">72%</p></div>
+<div class="pbox"><h4>+</h4>12pm-2pm<p class="big">70%</p></div>
+<div class="pbox"><h4>2pm-5pm</h4><p class="big">61%</p></div>
 </div>
 </section>
 
@@ -71,18 +71,18 @@
 <li>Historical demand curves</li>
 <li>Exam week traffic increase</li>
 <li>Weather influences car usage</li>
-<li>Accident on ring road increases arrivals</li>
+<li>Accident on ring road delays arrivals</li>
 </ul>
 </section>
 
 
 <!-- Traffic & Incident Correlation -->
 <section>
-<h2>Traffic & Incident Correlation</h2>
+<h2>Traffic & Incident News</h2>
 <ul>
-<li>Traffic speed near campus: 27 km/h</li>
-<li>Incident: Minor crash at Eindhoven Ring</li>
-<li>Impact: +12% more car arrivals</li>
+<li>Traffic near Veldmaarschalk Montgomerylaan</li>
+<li>Incident: Minor crash at Eindhoven Ring on Veldmaarschalk Montgomerylaan</li>
+<li>Impact: delay in car arrivals</li>
 <li>Peak shift: +20 minutes</li>
 </ul>
 </section>
