--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Mobility Dashboard Demo</title>
 <link rel="stylesheet" href="styles.css">
 
-
 <!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 <!-- Chart.js -->
@@ -15,77 +14,71 @@
 </head>
 <body>
 <div class="container">
-<h1>Mobility Dashboard Demo</h1>
+  <h1>Mobility Dashboard Demo</h1>
 
+  <!-- Heatmap Section -->
+  <section>
+    <h2>Campus Heatmap – Fontys Eindhoven</h2>
+    <div id="campus-map" style="height:400px; border-radius:12px;"></div>
+  </section>
 
-<!-- Heatmap Section -->
-<section>
-<h2>Campus Heatmap – Fontys Eindhoven</h2>
-<div id="campus-map" style="height:400px; border-radius:12px;"></div>
-</section>
+  <!-- Parking Occupancy Chart Section -->
+  <section>
+    <h2>Parking Occupancy Today</h2>
+    <canvas id="busyness-chart" style="max-width:100%; height:300px;"></canvas>
+  </section>
 
+  <!-- Widgets Section -->
+  <section class="widgets">
+    <div class="widget">
+      <h3>Weather</h3>
+      <p class="big">12°C</p>
+      <p>Cloudy · Eindhoven</p>
+    </div>
+    <div class="widget">
+      <h3>Current Time</h3>
+      <p id="time" class="big">--:--</p>
+      <p>Local Time</p>
+    </div>
+    <div class="widget">
+      <h3>Next Bus</h3>
+      <p class="big">7 min</p>
+      <p>Line 5 → Fontys Rachelsmolen</p>
+    </div>
+  </section>
 
-<!-- Parking Occupancy Chart Section -->
-<section>
-<h2>Parking Occupancy Today</h2>
-<canvas id="busyness-chart" style="max-width:100%; height:300px;"></canvas>
-</section>
+  <!-- Parking Prediction Section -->
+  <section>
+    <h2>Parking Prediction Modeling</h2>
+    <div class="pred-grid">
+      <div class="pbox"><h4>8am-10am</h4><p class="big" id="slot1">65%</p></div>
+      <div class="pbox"><h4>10am-12pm</h4><p class="big" id="slot2">72%</p></div>
+      <div class="pbox"><h4>12pm-2pm</h4><p class="big" id="slot3">70%</p></div>
+      <div class="pbox"><h4>2pm-5pm</h4><p class="big" id="slot4">61%</p></div>
+    </div>
+  </section>
 
+  <!-- Why This Prediction -->
+  <section>
+    <h2>Why This Prediction?</h2>
+    <ul>
+      <li>Historical demand curves</li>
+      <li>Exam week traffic increase</li>
+      <li>Weather influences car usage</li>
+      <li>Accident on ring road delays arrivals</li>
+    </ul>
+  </section>
 
-<!-- Widgets Section -->
-<section class="widgets">
-<div class="widget">
-<h3>Weather</h3>
-<p class="big">12°C</p>
-<p>Cloudy · Eindhoven</p>
-</div>
-<div class="widget">
-<h3>Current Time</h3>
-<p id="time" class="big">--:--</p>
-<p>Local Time</p>
-</div>
-<div class="widget">
-<h3>Next Bus</h3>
-<p class="big">7 min</p>
-<p>Line 5 → Fontys Rachelsmolen</p>
-</div>
-</section>
-
-
-<!-- Parking Prediction Section -->
-<section>
-<h2>Parking Prediction Modeling</h2>
-<div class="pred-grid">
-<div class="pbox"><h4>8am-10am</h4><p class="big">65%</p></div>
-<div class="pbox"><h4>10am-12pm</h4><p class="big">72%</p></div>
-<div class="pbox"><h4>+</h4>12pm-2pm<p class="big">70%</p></div>
-<div class="pbox"><h4>2pm-5pm</h4><p class="big">61%</p></div>
-</div>
-</section>
-
-
-<!-- Why This Prediction -->
-<section>
-<h2>Why This Prediction?</h2>
-<ul>
-<li>Historical demand curves</li>
-<li>Exam week traffic increase</li>
-<li>Weather influences car usage</li>
-<li>Accident on ring road delays arrivals</li>
-</ul>
-</section>
-
-
-<!-- Traffic & Incident Correlation -->
-<section>
-<h2>Traffic & Incident News</h2>
-<ul>
-<li>Traffic near Veldmaarschalk Montgomerylaan</li>
-<li>Incident: Minor crash at Eindhoven Ring on Veldmaarschalk Montgomerylaan</li>
-<li>Impact: delay in car arrivals</li>
-<li>Peak shift: +20 minutes</li>
-</ul>
-</section>
+  <!-- Traffic & Incident News -->
+  <section>
+    <h2>Traffic & Incident News</h2>
+    <ul>
+      <li>Traffic near Veldmaarschalk Montgomerylaan</li>
+      <li>Incident: Minor crash at Eindhoven Ring on Veldmaarschalk Montgomerylaan</li>
+      <li>Impact: delay in car arrivals</li>
+      <li>Peak shift: +20 minutes</li>
+    </ul>
+  </section>
 </div>
 <script src="script.js"></script>
 </body>
