--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
   </section>
 
   <!-- Parking Prediction Section -->
-  <section>
-    <h2>Parking Prediction Modeling</h2>
-    <div class="pred-grid">
-      <div class="pbox"><h4>8am-10am</h4><p class="big" id="slot1">65%</p></div>
-      <div class="pbox"><h4>10am-12pm</h4><p class="big" id="slot2">72%</p></div>
-      <div class="pbox"><h4>12pm-2pm</h4><p class="big" id="slot3">70%</p></div>
-      <div class="pbox"><h4>2pm-5pm</h4><p class="big" id="slot4">61%</p></div>
-    </div>
-  </section>
+<section>
+  <h2>Parking Prediction Today</h2>
+  <div class="pred-grid">
+    <div class="pbox"><h4>8am-10am</h4><p class="big" id="slot1">65%</p></div>
+    <div class="pbox"><h4>10am-12pm</h4><p class="big" id="slot2">72%</p></div>
+    <div class="pbox"><h4>12pm-2pm</h4><p class="big" id="slot3">70%</p></div>
+    <div class="pbox"><h4>2pm-5pm</h4><p class="big" id="slot4">61%</p></div>
+  </div>
+</section>
 
   <!-- Why This Prediction -->
   <section>
