--- a/index.html
+++ b/index.html
@@ -19,42 +19,63 @@
   <!-- Heatmap Section -->
   <section>
     <h2>Campus Heatmap – Fontys Eindhoven</h2>
-    <div id="campus-map" style="height:400px; border-radius:12px;"></div>
+    <div id="campus-map" style="height:400px; border-radius:12px; margin-bottom:20px;"></div>
   </section>
 
   <!-- Parking Occupancy Chart Section -->
   <section>
     <h2>Parking Occupancy Today</h2>
-    <canvas id="busyness-chart" style="max-width:100%; height:300px;"></canvas>
+    <canvas id="busyness-chart" style="max-width:100%; height:300px; margin-bottom:20px;"></canvas>
   </section>
 
   <!-- Widgets Section -->
-  <section class="widgets">
-    <div class="widget">
+  <section class="widgets" style="display:flex; gap:20px; margin-bottom:20px;">
+    <div style="flex:1; background:#f2f2f2; padding:10px; border-radius:8px; text-align:center;">
       <h3>Weather</h3>
-      <p class="big">12°C</p>
+      <p style="font-size:2em;">12°C</p>
       <p>Cloudy · Eindhoven</p>
     </div>
-    <div class="widget">
+    <div style="flex:1; background:#f2f2f2; padding:10px; border-radius:8px; text-align:center;">
       <h3>Current Time</h3>
-      <p id="time" class="big">--:--</p>
+      <p id="time" style="font-size:2em;">--:--</p>
       <p>Local Time</p>
     </div>
-    <div class="widget">
+    <div style="flex:1; background:#f2f2f2; padding:10px; border-radius:8px; text-align:center;">
       <h3>Next Bus</h3>
-      <p class="big">7 min</p>
+      <p style="font-size:2em;">7 min</p>
       <p>Line 5 → Fontys Rachelsmolen</p>
+    </div>
+  </section>
+
+  <!-- Personalized Notifications Section -->
+  <section>
+    <h2>Personalized Notifications</h2>
+    <div style="background:#fff3e6; padding:15px; border-radius:10px; margin-bottom:20px;">
+      <ul>
+        <li><strong>Project 3:</strong> Today from 9am–1pm. Leave 20 minutes early due to the accident near campus.</li>
+        <li><strong>Macro:</strong> Today from 1pm–3pm. Consider leaving a bit early to avoid traffic.</li>
+        <li>Your favorite parking lot is almost full. Try another parking lot today.</li>
+        <li>Next bus may be delayed due to morning congestion.</li>
+      </ul>
     </div>
   </section>
 
   <!-- Parking Prediction Section -->
   <section>
     <h2>Parking Prediction Today</h2>
-    <div class="pred-grid">
-      <div class="pbox"><h4>8am-10am</h4><p class="big" id="slot1">65%</p></div>
-      <div class="pbox"><h4>10am-12pm</h4><p class="big" id="slot2">72%</p></div>
-      <div class="pbox"><h4>12pm-2pm</h4><p class="big" id="slot3">70%</p></div>
-      <div class="pbox"><h4>2pm-5pm</h4><p class="big" id="slot4">61%</p></div>
+    <div style="display:flex; gap:10px; margin-bottom:20px;">
+      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
+        <h4>8am-10am</h4><p class="big" id="slot1">65%</p>
+      </div>
+      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
+        <h4>10am-12pm</h4><p class="big" id="slot2">72%</p>
+      </div>
+      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
+        <h4>12pm-2pm</h4><p class="big" id="slot3">70%</p>
+      </div>
+      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
+        <h4>2pm-5pm</h4><p class="big" id="slot4">61%</p>
+      </div>
     </div>
   </section>
 
@@ -74,12 +95,13 @@
     <h2>Traffic & Incident News</h2>
     <ul>
       <li>Traffic near Veldmaarschalk Montgomerylaan</li>
-      <li>Incident: Minor crash at Eindhoven Ring on Veldmaarschalk Montgomerylaan</li>
+      <li>Incident: Minor crash at Eindhoven Ring</li>
       <li>Impact: delay in car arrivals</li>
       <li>Peak shift: +20 minutes</li>
     </ul>
   </section>
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
