--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- Personalized Notifications Section -->
   <section>
     <h2>Personalized Notifications</h2>
-    <div style="background:#fff3e6; padding:15px; border-radius:10px; margin-bottom:20px;">
+    <div style="background:#f2f2f2; padding:15px; border-radius:10px; margin-bottom:20px;">
       <ul>
         <li><strong>Project 3:</strong> Today from 9am–1pm. Leave 20 minutes early due to the accident near campus.</li>
         <li><strong>Macro:</strong> Today from 1pm–3pm. Consider leaving a bit early to avoid traffic.</li>
