--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+<style>
+  body { font-family: Arial, sans-serif; background:#fdf5ff; margin:0; padding:0; }
+  .container { max-width:1000px; margin:auto; padding:20px; }
+  section { background: #fce4ff; padding:15px; border-radius:12px; margin-bottom:20px; }
+  h1,h2,h3,h4 { margin:5px 0; }
+  .widgets { display:flex; gap:20px; }
+  .widget { flex:1; background:#f8eaff; padding:10px; border-radius:10px; text-align:center; }
+  .pred-grid { display:flex; gap:10px; }
+  .pbox { flex:1; background:#f8eaff; padding:10px; border-radius:10px; text-align:center; }
+  ul { padding-left:20px; }
+</style>
 </head>
 <body>
 <div class="container">
@@ -19,28 +31,28 @@
   <!-- Heatmap Section -->
   <section>
     <h2>Campus Heatmap – Fontys Eindhoven</h2>
-    <div id="campus-map" style="height:400px; border-radius:12px; margin-bottom:20px;"></div>
+    <div id="campus-map" style="height:400px; border-radius:12px;"></div>
   </section>
 
   <!-- Parking Occupancy Chart Section -->
   <section>
     <h2>Parking Occupancy Today</h2>
-    <canvas id="busyness-chart" style="max-width:100%; height:300px; margin-bottom:20px;"></canvas>
+    <canvas id="busyness-chart" style="width:100%; height:300px;"></canvas>
   </section>
 
   <!-- Widgets Section -->
-  <section class="widgets" style="display:flex; gap:20px; margin-bottom:20px;">
-    <div style="flex:1; background:#f2f2f2; padding:10px; border-radius:8px; text-align:center;">
+  <section class="widgets">
+    <div class="widget">
       <h3>Weather</h3>
       <p style="font-size:2em;">12°C</p>
       <p>Cloudy · Eindhoven</p>
     </div>
-    <div style="flex:1; background:#f2f2f2; padding:10px; border-radius:8px; text-align:center;">
+    <div class="widget">
       <h3>Current Time</h3>
       <p id="time" style="font-size:2em;">--:--</p>
       <p>Local Time</p>
     </div>
-    <div style="flex:1; background:#f2f2f2; padding:10px; border-radius:8px; text-align:center;">
+    <div class="widget">
       <h3>Next Bus</h3>
       <p style="font-size:2em;">7 min</p>
       <p>Line 5 → Fontys Rachelsmolen</p>
@@ -50,7 +62,7 @@
   <!-- Personalized Notifications Section -->
   <section>
     <h2>Personalized Notifications</h2>
-    <div style="background:#f2f2f2; padding:15px; border-radius:10px; margin-bottom:20px;">
+    <div style="padding:15px; border-radius:10px;">
       <ul>
         <li><strong>Project 3:</strong> Today from 9am–1pm. Leave 20 minutes early due to the accident near campus.</li>
         <li><strong>Macro:</strong> Today from 1pm–3pm. Consider leaving a bit early to avoid traffic.</li>
@@ -63,19 +75,11 @@
   <!-- Parking Prediction Section -->
   <section>
     <h2>Parking Prediction Today</h2>
-    <div style="display:flex; gap:10px; margin-bottom:20px;">
-      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
-        <h4>8am-10am</h4><p class="big" id="slot1">65%</p>
-      </div>
-      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
-        <h4>10am-12pm</h4><p class="big" id="slot2">72%</p>
-      </div>
-      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
-        <h4>12pm-2pm</h4><p class="big" id="slot3">70%</p>
-      </div>
-      <div style="flex:1; background:#e6f2ff; padding:10px; border-radius:8px; text-align:center;">
-        <h4>2pm-5pm</h4><p class="big" id="slot4">61%</p>
-      </div>
+    <div class="pred-grid">
+      <div class="pbox"><h4>8am-10am</h4><p class="big" id="slot1">65%</p></div>
+      <div class="pbox"><h4>10am-12pm</h4><p class="big" id="slot2">72%</p></div>
+      <div class="pbox"><h4>12pm-2pm</h4><p class="big" id="slot3">70%</p></div>
+      <div class="pbox"><h4>2pm-5pm</h4><p class="big" id="slot4">61%</p></div>
     </div>
   </section>
 
