--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   .container { max-width:1000px; margin:auto; padding:20px; }
   section { background: #fce4ff; padding:15px; border-radius:12px; margin-bottom:20px; }
   h1,h2,h3,h4 { margin:5px 0; }
-  .widgets { display:flex; gap:20px; }
+  .widgets { display:flex; gap:20px; margin-bottom:20px; }
   .widget { flex:1; background:#f8eaff; padding:10px; border-radius:10px; text-align:center; }
   .pred-grid { display:flex; gap:10px; }
   .pbox { flex:1; background:#f8eaff; padding:10px; border-radius:10px; text-align:center; }
