--- a/index.html
+++ b/index.html
@@ -11,18 +11,6 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-<style>
-  body { font-family: Arial, sans-serif; background:#fdf5ff; margin:0; padding:0; }
-  .container { max-width:1000px; margin:auto; padding:20px; }
-  section { background: #fce4ff; padding:15px; border-radius:12px; margin-bottom:20px; }
-  h1,h2,h3,h4 { margin:5px 0; }
-  .widgets { display:flex; gap:20px; margin-bottom:20px; }
-  .widget { flex:1; background:#f8eaff; padding:10px; border-radius:10px; text-align:center; }
-  .pred-grid { display:flex; gap:10px; }
-  .pbox { flex:1; background:#f8eaff; padding:10px; border-radius:10px; text-align:center; }
-  ul { padding-left:20px; }
-</style>
 </head>
 <body>
 <div class="container">
@@ -31,30 +19,30 @@
   <!-- Heatmap Section -->
   <section>
     <h2>Campus Heatmap – Fontys Eindhoven</h2>
-    <div id="campus-map" style="height:400px; border-radius:12px;"></div>
+    <div id="campus-map" style="height:400px;"></div>
   </section>
 
   <!-- Parking Occupancy Chart Section -->
   <section>
     <h2>Parking Occupancy Today</h2>
-    <canvas id="busyness-chart" style="width:100%; height:300px;"></canvas>
+    <canvas id="busyness-chart"></canvas>
   </section>
 
   <!-- Widgets Section -->
   <section class="widgets">
     <div class="widget">
       <h3>Weather</h3>
-      <p style="font-size:2em;">12°C</p>
+      <p class="big">12°C</p>
       <p>Cloudy · Eindhoven</p>
     </div>
     <div class="widget">
       <h3>Current Time</h3>
-      <p id="time" style="font-size:2em;">--:--</p>
+      <p id="time" class="big">--:--</p>
       <p>Local Time</p>
     </div>
     <div class="widget">
       <h3>Next Bus</h3>
-      <p style="font-size:2em;">7 min</p>
+      <p class="big">7 min</p>
       <p>Line 5 → Fontys Rachelsmolen</p>
     </div>
   </section>
@@ -62,7 +50,7 @@
   <!-- Personalized Notifications Section -->
   <section>
     <h2>Personalized Notifications</h2>
-    <div style="padding:15px; border-radius:10px;">
+    <div>
       <ul>
         <li><strong>Project 3:</strong> Today from 9am–1pm. Leave 20 minutes early due to the accident near campus.</li>
         <li><strong>Macro:</strong> Today from 1pm–3pm. Consider leaving a bit early to avoid traffic.</li>
